--- a/Entrega2-war/web/resources/css/bootstrap.css
+++ b/Entrega2-war/web/resources/css/bootstrap.css
@@ -12,6 +12,12 @@ html {
 }
 body {
   margin: 0;
+ 
+background: url(../img/madera.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
 article,
 aside,
