--- a/Entrega2-war/web/resources/css/landing-page.css
+++ b/Entrega2-war/web/resources/css/landing-page.css
@@ -10,7 +10,14 @@ html {
     height: 100%;
 }
 
-body,
+body{
+     
+background: url(../img/madera.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
 h1,
 h2,
 h3,
@@ -35,7 +42,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+   /* background: url(../img/intro-bg.jpg) no-repeat center center;*/
     background-size: cover;
 }
 
